Wed Sep  7 01:43:43 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (brk.lo,stackalloc.lo,dvsprintf.lo): Update custom
	targets based on automake 1.11.1 so that parallel builds are
	again reliable.

Wed Sep  7 00:08:02 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* stdio/fread.c (fread): Set EOF when last byte is read.
	Fix returned number of objects read when there is a partial one read.

Sat Aug 27 20:34:12 2011  Lee Noar <leenoar@sky.com>

	* unix/getcwd.c(getcwd): Only free ro_path if it was
	allocated with malloc in the first place.

Thu Aug 11 23:06:47 2011  Lee Noar <leenoar@sky.com>

	* sys/_syslib.s(__env_riscos,__env_read,__env_unixlib):
	Avoid having to save the PIC register by using r12.
	Simplifies the source code because the same stack
	save/load instructions can be used for both PIC and
	non PIC versions.

Sat Aug 06 18:23:01 2011  Lee Noar <leenoar@sky.com>

	* pthread/_context.s: Convert to new PIC scheme.
	* pthread/_yield.s: Likewise.
	* pthread/_ints.s: Likewise.
	* signal/_demangle.s: Likewise.
	* signal/_signal.s: Likewise.
	* common/_exist.s: Likewise.
	* common/_riscosify.s: Likewise.
	* common/_taskhandle.s: Likewise.
	* gcccompat/_b_return.s: Likewise.
	* gcccompat/_eh_support.s: Likewise.
	* sys/_jmp.s: Likewise.
	* sys/_vfork.s: Likewise.
	* sys/_syslib.s: Likewise.
	* include/sys/elf.h: Define DT_RISCOS_PIC.

Sun May 29 18:32:56 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* include/sys/stat.h (S_IFBLK, S_IFLNK): Renumber.
	(S_IFMT): Trim bits.
	(S_ISREG, S_ISFIFO, S_ISLNK): Use S_IFMT mask so that
	result is 0 or 1.

Sun May 15 19:58:43 2011  Lee Noar <leenoar@sky.com>

	* gcccompat/_eh_support.s(__ehs_unwind_stack_chunk):
	Calls to alloca() makes things awkward in that the alloca
	implementation uses the frame pointer of the callee of the
	callee of alloca as a key (note that there are two callees
	and that this is not a typing error). This means that by
	the time __gcc_alloca_free has been detected, the frame